--- a/polbot-core/src/main/resources/templates/index.html
+++ b/polbot-core/src/main/resources/templates/index.html
@@ -88,6 +88,22 @@
 
                     <hr/>
 
+                    <div class="row">
+                        <form action="#" th:action="@{/currencyconfig}" th:object="${currencyConfig}"
+                              method="post">
+
+                            <input type="hidden" name="currency"
+                                   th:value="${currencyConfig.currencyPair}" value=""/>
+
+                            <div class="submit">
+                                <button type="submit" class="btn btn-default btn-primary-group"
+                                        style="float: right;margin: 10px;"
+                                        name="show" th:text="New">Add Seed Starter
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+
                     <div class="row" th:each="currencyConfig : ${currencyConfigs}">
                         <div class="col-md-12">
                             <div class="panel panel-default">
@@ -118,7 +134,7 @@
 
                                             <div class="submit">
                                                 <button type="submit" class="btn btn-primary btn-primary-group"
-                                                        style="float: right"
+                                                        style="float: right;margin-right: 10px;"
                                                         name="show" th:text="Show">Add Seed Starter
                                                 </button>
                                             </div>
