--- a/polbot-core/src/main/resources/templates/currencyconfig.html
+++ b/polbot-core/src/main/resources/templates/currencyconfig.html
@@ -115,6 +115,12 @@
 
 
                         <form action="#" th:action="@{/currencyconfig}" th:object="${currencyConfig}" method="post">
+
+
+                            <input id="userId" type="hidden"
+                                   th:field="*{userId}" />
+
+
                             <div class="row">
 
                                 <div class="col-sm-6 col-lg-4">
