--- a/polbot-core/src/main/resources/templates/index.html
+++ b/polbot-core/src/main/resources/templates/index.html
@@ -76,7 +76,12 @@
         </div>
 
         <div class="col-md-9">
-
+            <form action = "setSearch" method="post" class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" name="search"  th:value="${searchKey}" class="form-control" placeholder="Search" id="newSearch"></input>
+                </div>
+                <button type="submit" class="btn btn-default" id="searchButton">Search</button>
+            </form>
             <div class="thumbnail">
                 <div id="chartdiv" style="width:800px; height:1px;"></div>
 
