--- a/polbot-core/src/main/resources/templates/currencyconfig.html
+++ b/polbot-core/src/main/resources/templates/currencyconfig.html
@@ -52,40 +52,40 @@
 </head>
 
 <body>
-
-<!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">PolBot</a>
+<div th:replace="header :: header">
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">PolBot</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">Page1</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="#">Page1</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
-
+        <!-- /.container -->
+    </nav>
+</div>
 <!-- Page Content -->
 <div class="container">
 
@@ -118,7 +118,7 @@
 
 
                             <input id="userId" type="hidden"
-                                   th:field="*{userId}" />
+                                   th:field="*{userId}"/>
 
 
                             <div class="row">
@@ -197,7 +197,7 @@
                                     </div>
                                 </div>
 
-    
+
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="form-group">
                                         <label th:for="checkboxBuyable" th:text="#{currencyconfig.buyable} "/>
@@ -225,7 +225,8 @@
                             <div class="row">
 
                                 <div class="submit">
-                                    <button type="submit" onclick="return confirm('Want to delete?')" class="btn btn-primary btn-primary-group"
+                                    <button type="submit" onclick="return confirm('Want to delete?')"
+                                            class="btn btn-primary btn-primary-group"
                                             style="float: left"
                                             name="delete" th:text="Sil">Add Seed Starter
                                     </button>
