--- a/polbot-core/src/main/resources/templates/header.html
+++ b/polbot-core/src/main/resources/templates/header.html
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">My project</a>
+            <a class="navbar-brand" href="/">PolBot</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -19,14 +19,23 @@
                 <li><a href="#" th:href="@{/message}">Messages</a></li>
                 <li><a href="#" th:href="@{/task}">Tasks</a></li>
             </ul>
+
             <ul class="nav navbar-nav navbar-right">
                 <li th:if="${#authorization?.expression('!isAuthenticated()')}">
-                    <a href="/signin" th:href="@{/signin}">Sign in</a>
+                    <a href="/signin" th:href="@{/login}">Sign in</a>
                 </li>
-                <li th:if="${#authorization?.expression('isAuthenticated()')}">
-                    <a href="/logout" th:href="@{/logout}">Logout</a>
-                </li>
+
             </ul>
+            <form id="formout" th:action="@{/logout}" method="post">
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li th:if="${#authorization?.expression('isAuthenticated()')}">
+
+                        <a href="#" th:inline="text" onclick="formout.submit();">[[${#httpServletRequest.remoteUser}]]
+                            Logout</a>
+                    </li>
+                </ul>
+            </form>
         </div>
     </div>
 </div>
