--- a/polbot-core/src/main/resources/templates/index.html
+++ b/polbot-core/src/main/resources/templates/index.html
@@ -17,12 +17,28 @@
     <!-- Custom CSS -->
     <link th:href="@{/css/shop-item.css}" href="../../css/shop-item.css" rel="stylesheet"/>
 
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#ctable').DataTable();
+        } );
+    </script>
 
 </head>
 
@@ -69,80 +85,41 @@
         </div>
 
         <div class="col-md-9">
-            <form action = "setSearch" method="post" class="navbar-form navbar-right">
-                <div class="form-group">
-                    <input type="text" name="search"  th:value="${searchKey}" class="form-control" placeholder="Search" id="newSearch"></input>
-                </div>
-                <button type="submit" class="btn btn-default" id="searchButton">Search</button>
-            </form>
             <div class="thumbnail">
                 <div id="chartdiv" style="width:800px; height:1px;"></div>
 
                 <div class="well">
 
                     <div class="text-left">
-                        <h2 th:text="#{currencyconfig.title}">Leave a Review</h2>
+                        <h2>Currency List</h2>
                     </div>
 
                     <hr/>
 
                     <div class="row">
-                        <form action="#" th:action="@{/currencyconfig}" th:object="${currencyConfig}"
-                              method="post">
-
-                            <input type="hidden" name="currency"
-                                   th:value="${currencyConfig.currencyPair}" value=""/>
-
-                            <div class="submit">
-                                <button type="submit" class="btn btn-default btn-primary-group"
-                                        style="float: right;margin: 10px;"
-                                        name="show" th:text="New">Add Seed Starter
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-
-                    <div class="row" th:each="poloniexTicker : ${poloniexTickers}">
                         <div class="col-md-12">
                             <div class="panel panel-default">
                                 <div class="panel-body">
-                                    <span style="font-weight: bold" th:text="#{poloniexTicker.} +' : '"/>
-                                    <span th:text="${currencyConfig.currencyPair}"/><br/>
-                                    <span style="font-weight: bold"
-                                          th:text="#{currencyconfig.usableBalancePercent} +' : '"/>
-                                    <span th:text="${currencyConfig.usableBalancePercent}"/><br/>
-                                    <span style="font-weight: bold" th:text="#{currencyconfig.buyAtPrice} +' : '"/>
-                                    <span th:text="${currencyConfig.buyAtPrice}"/><br/>
-                                    <span style="font-weight: bold" th:text="#{currencyconfig.buyOnPercent} +' : '"/>
-                                    <span th:text="${currencyConfig.buyOnPercent}"/><br/>
-                                    <span style="font-weight: bold" th:text="#{currencyconfig.sellAtPrice} +' : '"/>
-                                    <span th:text="${currencyConfig.sellAtPrice}"/><br/>
-                                    <span style="font-weight: bold" th:text="#{currencyconfig.sellOnPercent} +' : '"/>
-                                    <span th:text="${currencyConfig.sellOnPercent}"/><br/>
-                                    <label th:for="checkboxBuyable" th:text="#{currencyconfig.buyable}"/>
-                                    <input th:id="checkboxBuyable" type="checkbox" disabled="true"
-                                           th:checked="${currencyConfig.buyable}"/>
-                                    <label th:for="checkboxSellable" th:text="#{currencyconfig.sellable}"/>
-                                    <input th:id="checkboxSellable" type="checkbox" disabled="true"
-                                           th:checked="${currencyConfig.sellable}"/>
 
+                                    <table id="ctable" class="table table-responsive">
+                                        <thead>
+                                        <tr>
+                                            <th>Currency</th>
+                                            <th>Sell</th>
+                                            <th>Buy</th>
+                                            <th>Change</th>
+                                        </tr>
+                                        </thead>
 
-                                    <div class="row">
-                                        <form action="#" th:action="@{/currencyconfig}" th:object="${currencyConfig}"
-                                              method="post">
-
-                                            <input type="hidden" name="currency"
-                                                   th:value="${currencyConfig.currencyPair}" value=""/>
-
-                                            <div class="submit">
-                                                <button type="submit" class="btn btn-primary btn-primary-group"
-                                                        style="float: right;margin-right: 10px;"
-                                                        name="show" th:text="Show">Add Seed Starter
-                                                </button>
-                                            </div>
-                                        </form>
-                                    </div>
-
+                                        <tbody>
+                                        <tr  th:each="ticker : ${poloniexTickers}">
+                                            <td th:text="${ticker.key}">ETH</td>
+                                            <td th:text="${ticker.value.lowestAsk}">0.041</td>
+                                            <td th:text="${ticker.value.highestBid}">0.042</td>
+                                            <td th:text="${ticker.value.percentChange}">4</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
@@ -174,11 +151,6 @@
 </div>
 <!-- /.container -->
 
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
 
 </body>
 
