--- a/polbot-core/src/main/resources/templates/mycurrencies.html
+++ b/polbot-core/src/main/resources/templates/mycurrencies.html
@@ -69,12 +69,14 @@
         </div>
 
         <div class="col-md-9">
-            <form action = "setSearch" method="post" class="navbar-form navbar-right">
+            <form action="searchCurrencyConfig" method="post" class="navbar-form navbar-right">
                 <div class="form-group">
-                    <input type="text" name="search"  th:value="${searchKey}" class="form-control" placeholder="Search" id="newSearch"></input>
+                    <input type="text" name="search" th:value="${searchKey}" class="form-control" placeholder="Search"
+                           id="newSearch"/>
                 </div>
                 <button type="submit" class="btn btn-default" id="searchButton">Search</button>
             </form>
+
             <div class="thumbnail">
                 <div id="chartdiv" style="width:800px; height:1px;"></div>
 
