--- a/polbot-core/src/main/resources/templates/index.html
+++ b/polbot-core/src/main/resources/templates/index.html
@@ -36,7 +36,8 @@
     <link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
     <script type="text/javascript">
         $(document).ready(function() {
-            $('#ctable').DataTable();
+            $('#ctable').DataTable({responsive: true});
+
         } );
     </script>
 
