--- a/polbot-core/src/main/resources/templates/mycurrencies.html
+++ b/polbot-core/src/main/resources/templates/mycurrencies.html
@@ -12,7 +12,13 @@
     <title>Shop Item - Start Bootstrap Template</title>
 
     <link rel="stylesheet" type="text/css"
-          href="webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
+          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+
+    <!-- jQuery -->
+    <script th:src="@{/js/jquery.js}"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script th:src="@{/js/bootstrap.min.js}"></script>
 
     <!-- Custom CSS -->
     <link th:href="@{/css/shop-item.css}" href="../../css/shop-item.css" rel="stylesheet"/>
@@ -23,6 +29,15 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#ctable').DataTable({responsive: true});
+        });
+    </script>
 
 </head>
 
@@ -69,13 +84,6 @@
         </div>
 
         <div class="col-md-9">
-            <form action="searchCurrencyConfig" method="post" class="navbar-form navbar-right">
-                <div class="form-group">
-                    <input type="text" name="search" th:value="${searchKey}" class="form-control" placeholder="Search"
-                           id="newSearch"/>
-                </div>
-                <button type="submit" class="btn btn-default" id="searchButton">Search</button>
-            </form>
 
             <div class="thumbnail">
                 <div id="chartdiv" style="width:800px; height:1px;"></div>
@@ -104,46 +112,45 @@
                         </form>
                     </div>
 
-                    <div class="row" th:each="currencyConfig : ${currencyConfigs}">
+                    <div class="row">
                         <div class="col-md-12">
                             <div class="panel panel-default">
                                 <div class="panel-body">
-                                    <span style="font-weight: bold" th:text="#{currencyconfig.currencyPair} +' : '"/>
-                                    <span th:text="${currencyConfig.currencyPair}"/><br/>
-                                    <span style="font-weight: bold"
-                                          th:text="#{currencyconfig.usableBalancePercent} +' : '"/>
-                                    <span th:text="${currencyConfig.usableBalancePercent}"/><br/>
-                                    <span style="font-weight: bold" th:text="#{currencyconfig.buyAtPrice} +' : '"/>
-                                    <span th:text="${currencyConfig.buyAtPrice}"/><br/>
-                                    <span style="font-weight: bold" th:text="#{currencyconfig.buyOnPercent} +' : '"/>
-                                    <span th:text="${currencyConfig.buyOnPercent}"/><br/>
-                                    <span style="font-weight: bold" th:text="#{currencyconfig.sellAtPrice} +' : '"/>
-                                    <span th:text="${currencyConfig.sellAtPrice}"/><br/>
-                                    <span style="font-weight: bold" th:text="#{currencyconfig.sellOnPercent} +' : '"/>
-                                    <span th:text="${currencyConfig.sellOnPercent}"/><br/>
-                                    <label th:for="checkboxBuyable" th:text="#{currencyconfig.buyable}"/>
-                                    <input th:id="checkboxBuyable" type="checkbox" disabled="true"
-                                           th:checked="${currencyConfig.buyable}"/>
-                                    <label th:for="checkboxSellable" th:text="#{currencyconfig.sellable}"/>
-                                    <input th:id="checkboxSellable" type="checkbox" disabled="true"
-                                           th:checked="${currencyConfig.sellable}"/>
 
+                                    <table id="ctable" class="table table-responsive">
+                                        <thead>
+                                        <tr>
+                                            <th>Currency Pair</th>
+                                            <th>Usable Balance Percent</th>
+                                            <th>Buy On Percent</th>
+                                            <th>Sell On Percent</th>
+                                            <th>Buy at Price</th>
+                                            <th>Sell at Price</th>
+                                            <th>Can Buy</th>
+                                            <th>Can Sell</th>
+                                            <th>Show</th>
+                                        </tr>
+                                        </thead>
 
-                                    <div class="row">
-                                        <form action="#" th:action="@{/currencyconfig}" th:object="${currencyConfig}"
-                                              method="post">
-
-                                            <input type="hidden" name="currency"
-                                                   th:value="${currencyConfig.currencyPair}" value=""/>
-
-                                            <div class="submit">
-                                                <button type="submit" class="btn btn-primary btn-primary-group"
-                                                        style="float: right;margin-right: 10px;"
-                                                        name="show" th:text="Show">Add Seed Starter
-                                                </button>
-                                            </div>
-                                        </form>
-                                    </div>
+                                        <tbody>
+                                        <tr th:each="cc : ${currencyConfigs}">
+                                            <td th:text="${cc.currencyPair}">BTC_ETH</td>
+                                            <td th:text="${cc.usableBalancePercent}">25</td>
+                                            <td th:text="${cc.buyOnPercent}">5</td>
+                                            <td th:text="${cc.sellOnPercent}">5</td>
+                                            <td th:text="${cc.buyAtPrice}">0.0025</td>
+                                            <td th:text="${cc.sellAtPrice}">0.0025</td>
+                                            <td><input disabled="true" type="checkbox"  th:checked="${cc.buyable}" /></td>
+                                            <td><input disabled="true" type="checkbox"  th:checked="${cc.sellable}"/></td>
+                                            <td>
+                                                <div class="submit">
+                                                    <a th:href="@{/currencyconfig/(show='',currency=${cc.currencyPair})}"
+                                                       class="navbar-link">Show</a>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
 
                                 </div>
                             </div>
@@ -175,12 +182,6 @@
 
 </div>
 <!-- /.container -->
-
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
 
 </body>
 
