--- a/polbot-core/src/main/resources/templates/mail-operation-result.html
+++ b/polbot-core/src/main/resources/templates/mail-operation-result.html
@@ -55,11 +55,11 @@
                style="width:100%;border: 1px solid #d3e7d9;border-collapse: separate;border-spacing: 0px;background-color: #ffffff;">
             <thead style="display: table-header-group;vertical-align: middle;border-color: inherit;">
             <tr>
-                <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Currency</th>
-                <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Type</th>
-                <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Price</th>
-                <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Amount</th>
-                <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Total</th>
+                <th style="text-align: left;background-color: #e7e74e;font-weight: bold;">Type</th>
+                <th style="text-align: left;background-color: #e7e74e;font-weight: bold;">Price</th>
+                <th style="text-align: left;background-color: #e7e74e;font-weight: bold;">Amount</th>
+                <th style="text-align: left;background-color: #e7e74e;font-weight: bold;">Total</th>
+                <th style="text-align: left;background-color: #e7e74e;font-weight: bold;">Fee</th>
             </tr>
             </thead>
             <tbody>
@@ -106,11 +106,11 @@
            style="width:100%;border: 1px solid #d3e7d9;border-collapse: separate;border-spacing: 0px;background-color: #ffffff;">
         <thead style="display: table-header-group;vertical-align: middle;border-color: inherit;">
         <tr>
-            <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Currency</th>
-            <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Type</th>
-            <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Price</th>
-            <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Amount</th>
-            <th style="text-align: left;background-color: #d3e7d9;font-weight: bold;">Desc</th>
+            <th style="text-align: left;background-color: #e76c72;font-weight: bold;">Currency</th>
+            <th style="text-align: left;background-color: #e76c72;font-weight: bold;">Type</th>
+            <th style="text-align: left;background-color: #e76c72;font-weight: bold;">Price</th>
+            <th style="text-align: left;background-color: #e76c72;font-weight: bold;">Amount</th>
+            <th style="text-align: left;background-color: #e76c72;font-weight: bold;">Desc</th>
         </tr>
         </thead>
         <tbody>
@@ -125,8 +125,33 @@
     </table>
 </div>
 <br/>
+
+<hr/>
+
+<h2>Balances</h2>
+<table class="orderBook orderBookRight"
+       style="width:100%;border: 1px solid #d3e7d9;border-collapse: separate;border-spacing: 0px;background-color: #ffffff;">
+    <thead style="display: table-header-group;vertical-align: middle;border-color: inherit;">
+    <tr>
+        <th style="text-align: left;background-color: #6ab0e7;font-weight: bold;">Currency</th>
+        <th style="text-align: left;background-color: #6ab0e7;font-weight: bold;">Available</th>
+        <th style="text-align: left;background-color: #6ab0e7;font-weight: bold;">On Orders</th>
+        <th style="text-align: left;background-color: #6ab0e7;font-weight: bold;">BTC Value</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="o: ${balances}">
+        <td th:text="${o.key}">ETH</td>
+        <td th:text="${o.value.available}">0.2</td>
+        <td th:text="${o.value.onOrders}">0.2</td>
+        <td th:text="${o.value.btcValue}">0.0002</td>
+    </tr>
+    </tbody>
+</table>
+<br />
 <div>
-    <span th:text="'Total Balance '+${balance}+' BTC'"></span>
+    <span th:text="'Total Balance '+${btcBalance}+' BTC'"></span>
 </div>
+
 </body>
 </html>
