Set UsableBalancePercent, SellOnPercent and BuyOnPercent for all currencies

--- a/polbot-core/src/main/resources/templates/openOrders.html
+++ b/polbot-core/src/main/resources/templates/openOrders.html
@@ -93,6 +93,13 @@
 
 
 
+<div class="row">
+    <div class="col-md-3">
+        <a class="btn btn-info" href="/orders/setPercentageForAllCurrencies">Set Percentage For All Currencies</a>
+    </div>
+</div>
+
+
 <h1>
     YOUR OPEN ORDERS
 </h1>
