A new collective order development for currencies with too much sell order

--- a/polbot-core/src/main/resources/templates/openOrders.html
+++ b/polbot-core/src/main/resources/templates/openOrders.html
@@ -87,15 +87,12 @@
     </div>
 </div>
 
-
-
-
-
-
-
 <div class="row">
     <div class="col-md-3">
         <a class="btn btn-info" href="/orders/setPercentageForAllCurrencies">Set Percentage For All Currencies</a>
+    </div>
+    <div class="col-md-3">
+        <a class="btn btn-info" href="/orders/stopbuyordersforcurrencies">stop buy orders for currencies with too much sell orders</a>
     </div>
 </div>
 
