Calculation usable BTC balance for each currency deployed

--- a/polbot-core/src/main/resources/templates/mycurrencies.html
+++ b/polbot-core/src/main/resources/templates/mycurrencies.html
@@ -35,7 +35,7 @@
     <link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#ctable').DataTable({responsive: true});
+            $('#ctable').DataTable({responsive: true,  pageLength: 100});
         });
     </script>
 
