--- a/polbot-core/src/main/resources/templates/header.html
+++ b/polbot-core/src/main/resources/templates/header.html
@@ -18,6 +18,7 @@
                 <li class="active"><a href="#" th:href="@{/}">Home</a></li>
                 <li><a href="#" th:if="${#authorization?.expression('isAuthenticated()')}" th:href="@{/mycurrencies}">My Currencies</a></li>
                 <li><a href="#" th:if="${#authorization?.expression('isAuthenticated()')}" th:href="@{/orders/openorders}">Open Orders</a></li>
+                <li><a href="#" th:if="${#authorization?.expression('isAuthenticated()')}" th:href="@{/edituserinfo?show=}">Edit Your Info</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
