--- a/polbot-core/src/main/resources/templates/edituserinfo.html
+++ b/polbot-core/src/main/resources/templates/edituserinfo.html
@@ -110,6 +110,14 @@
                         <input id="inputbuyOrderCancelationDay" class="form-control" type="text" th:field="*{buyOrderCancelationDay}"
                                th:errorclass="fieldError"/>
              </div>
+    <div class="form-group">
+        <label for="checkboxemailNotification"> Email Notification:</label>
+
+        <input type="checkbox" id="checkboxemailNotification"
+               class="form-control"
+               th:field="*{emailNotification}"
+                       th:errorclass="fieldError"/>
+    </div>
         <div class="submit">
             <button type="submit" class="btn btn-primary btn-primary-group"
                     style="float: right"
