--- a/polbot-core/src/main/resources/templates/header.html
+++ b/polbot-core/src/main/resources/templates/header.html
@@ -3,42 +3,43 @@
 <head>
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top" th:fragment="header">
-    <div class="container">
+
+
+<nav class="navbar navbar-inverse" th:fragment="header">
+    <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">PolBot</a>
+            <a class="navbar-brand" href="#">PolBot</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#" th:href="@{/}">Home</a></li>
                 <li><a href="#" th:if="${#authorization?.expression('isAuthenticated()')}" th:href="@{/mycurrencies}">My Currencies</a></li>
                 <li><a href="#" th:if="${#authorization?.expression('isAuthenticated()')}" th:href="@{/orders/openorders}">Open Orders</a></li>
                 <li><a href="#" th:if="${#authorization?.expression('isAuthenticated()')}" th:href="@{/edituserinfo?show=}">Edit Your Info</a></li>
             </ul>
-
             <ul class="nav navbar-nav navbar-right">
                 <li th:if="${#authorization?.expression('!isAuthenticated()')}">
                     <a href="/signin" th:href="@{/login}">Sign in</a>
                 </li>
-
-            </ul>
-            <form id="formout" th:action="@{/logout}" method="post">
-                <ul class="nav navbar-nav navbar-right">
-
-                    <li th:if="${#authorization?.expression('isAuthenticated()')}">
+                <li th:if="${#authorization?.expression('isAuthenticated()')}">
+                    <form id="formout" th:action="@{/logout}" method="post">
 
                         <a href="#" th:inline="text" onclick="formout.submit();">[[${#httpServletRequest.remoteUser}]]
                             Logout</a>
-                    </li>
-                </ul>
-            </form>
+                    </form>
+                </li>
+            </ul>
+
         </div>
     </div>
-</div>
+</nav>
+
+
+
 </body>
 </html>
